@@ -52,6 +52,9 @@ using namespace std;
 #define _O_SHORT_LIVED 0
 #endif
 
+#endif
+
+#ifndef HAVE_MKSTEMP
 extern "C"
 int mkstemp(char *tmpl)
 {
@@ -59,8 +62,8 @@ int mkstemp(char *tmpl)
   mktemp(tmpl); ret=open(tmpl,O_RDWR|O_BINARY|O_CREAT|O_EXCL|_O_SHORT_LIVED, _S_IREAD|_S_IWRITE);
   return ret;
 }
-
 #endif
+
 
 
 static const char *cstr(const string &str){
@@ -142,90 +145,6 @@ void XML::set_outfilename(string outfilename_)
     tempfile_template = outfilename_ + "_tmp_XXXXXXXX"; // a better default
 }
 
-
-
-#ifndef HAVE_MKSTEMP
-/*
- * The following lines are LGPL'ed from GNU C Library
- *
- * http://www.castaglia.org/proftpd/doc/devel-guide/src/lib/glibc-mkstemp.c.html
- */
- 
-/* These are the characters used in temporary filenames.  */
-static const char letters[] =
-    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-
-/* Generate a temporary file name based on TMPL.  TMPL must match the
-   rules for mk[s]temp (i.e. end in "XXXXXX").  The name constructed
-   does not exist at the time of the call to mkstemp().  TMPL is
-   overwritten with the result.  Creates the file and returns a read-write
-   fd; the file is mode 0600 modulo umask.
-
-   We use a clever algorithm to get hard-to-predict names. */
-static int mkstemp (char *tmpl) {
-    int len;
-    char *XXXXXX;
-    static uint64_t value;
-    struct timeval tv;
-    int count, fd;
-    int save_errno = errno;
-
-    len = strlen (tmpl);
-    if (len < 6 || strcmp (&tmpl[len - 6], "XXXXXX"))
-	{
-	    errno = EINVAL;
-	    return -1;
-	}
-
-    /* This is where the Xs start.  */
-    XXXXXX = &tmpl[len - 6];
-
-    /* Get some more or less random data.  */
-    gettimeofday (&tv, NULL);
-    value += ((uint64_t) tv.tv_usec << 16) ^ tv.tv_sec ^ getpid ();
-
-    for (count = 0; count < TMP_MAX; value += 7777, ++count)
-	{
-	    uint64_t v = value;
-
-	    /* Fill in the random bits.  */
-	    XXXXXX[0] = letters[v % 62];
-	    v /= 62;
-	    XXXXXX[1] = letters[v % 62];
-	    v /= 62;
-	    XXXXXX[2] = letters[v % 62];
-	    v /= 62;
-	    XXXXXX[3] = letters[v % 62];
-	    v /= 62;
-	    XXXXXX[4] = letters[v % 62];
-	    v /= 62;
-	    XXXXXX[5] = letters[v % 62];
-
-	    /* NOTE: this, or test for _LARGEFILE_SOURCE in order to use the O_LARGEFILE
-	     *  open flag
-	     */
-
-#ifdef _LARGEFILE_SOURCE
-	    fd = open64 (tmp, O_RDWR | O_CREAT | O_EXCL, 0600);
-#else
-	    fd = open (tmpl, O_RDWR | O_CREAT | O_EXCL, 0600);
-#endif
-	    if (fd >= 0)
-		{
-		    errno = save_errno;
-		    return fd;
-		}
-	    else if (errno != EEXIST)
-		/* Any other error will apply also to other names we might
-		   try, and there are 2^32 or so of them, so give up now. */
-		return -1;
-	}
-
-    /* We got out of the loop because we ran out of combinations to try.  */
-    errno = EEXIST;
-    return -1;
-}
-#endif
 
 
 
